jqwik property-based testing for JTD validation `JtdPropertyTest` (#100)